--- a/Sidder/SidderApp.csproj
+++ b/Sidder/SidderApp.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SidderApp</RootNamespace>
-    <AssemblyName>Sidder</AssemblyName>
+    <AssemblyName>Sidder-SAVE</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
